--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     <div class="row">
         <div class="panel panel-default">
             <!-- Todo: Style Header Bar -->
+            <h1>Task Tracker</h1>
         </div>
         <div class="row">
             <div class="col-md-3 panel panel-default full-height">
                 <!-- Todo: Add Buttons -- Courtney-->
+                <button type="button" class="btn btn-info btn-lg btn-block">Today</button>
+                <button type="button" class="btn btn-info btn-lg btn-block">This Week</button>
+                <button type="button" class="btn btn-info btn-lg btn-block">This Month</button>
             </div>
             <div class="col-md-9 panel panel-default full-height">
                 <!-- Todo: Add Reminders Section -- Cody -->
