--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="panel panel-default">
             <!-- Todo: Style Header Bar -->
-            <h1>Task Tracker</h1>
+            <h1><img src="icon.jpg"> Task Tracker</h1>
         </div>
         <div class="row">
             <div class="col-md-3 panel panel-default full-height">
