--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/datepicker.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -34,7 +35,7 @@
                 <button type="button" class="btn btn-info btn-lg btn-block">This Month</button>
             </div>
             <div id='right-column' class="col-md-9">
-                <div class="panel panel-default full-height">
+                <div class="panel panel-info full-height">
                     <div class="panel-heading"><h5>Tasks</h5></div>
                     <!-- Todo: Add Reminders Section -- Cody -->
                     <div id="task-table">
@@ -67,5 +68,6 @@
 <script src="js/jquery-2.1.4.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap-datepicker.js"></script>
 <script src="js/app.js"></script>
 </html>
