Added Filtering Buttons JS

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <div class="row">
             <div class="col-md-3 panel panel-default full-height">
                 <!-- Todo: Add Buttons -- Courtney-->
-                <button type="button" class="btn btn-info btn-lg btn-block">Today</button>
-                <button type="button" class="btn btn-info btn-lg btn-block">This Week</button>
-                <button type="button" class="btn btn-info btn-lg btn-block">This Month</button>
+                <button id='showAllBtn' type="button" class="btn btn-info btn-lg btn-block">Show All</button>
+                <button id='showIncompleteBtn' type="button" class="btn btn-info btn-lg btn-block">Incomplete</button>
+                <button id='todayBtn' type="button" class="btn btn-info btn-lg btn-block">Today</button>
+                <button id='thisWeekBtn' type="button" class="btn btn-info btn-lg btn-block">7 Days</button>
+                <button id='thisMonthBtn' type="button" class="btn btn-info btn-lg btn-block">30 Days</button>
             </div>
             <div id='right-column' class="col-md-9">
                 <div class="panel panel-info full-height">
