--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </div>
             <div id='right-column' class="col-md-9">
                 <div class="panel panel-info full-height">
-                    <div class="panel-heading"><h5>Tasks</h5></div>
+                    <div class="panel-heading"><h5>Tasks<button type="button" id="asc" class="btn btn-default">
+                            <span class="glyphicon glyphicon-sort right-align"></span></button></h5></div>
                     <!-- Todo: Add Reminders Section -- Cody -->
                     <div id="task-table">
                         <table class="table">
